Add raytracer_ppm2 to CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ target_link_libraries(raytracer_png sfml-window sfml-graphics sfml-system)
 add_executable(raytracer_progressive ${SOURCES} raytracer_progressive.cpp)
 target_link_libraries(raytracer_progressive sfml-window sfml-graphics sfml-system)
 add_executable(raytracer_ppm ${SOURCES} raytracer_ppm.cpp)
+add_executable(raytracer_ppm2 ${SOURCES} raytracer_ppm2.cpp)
